lib_LIBRARIES = libgpukernel.a
libgpukernel_a_SOURCES = \
	amd-bin.c \
	gpuisa.c \
	gpukernel.c \
	gpukernel.h \
	gpumachine.c \
	opencl.dat \
	opencl.c \
	opencl-obj.c

INCLUDES = -I$(top_srcdir)/src/libstruct \
	-I$(top_srcdir)/src/libmhandle \
	-I$(top_srcdir)/src/libopt \
	-I$(top_srcdir)/src/libmisc \
	-I$(top_srcdir)/src/libcpudisasm \
	-I$(top_srcdir)/src/libgpudisasm \
	-I$(top_srcdir)/src/libgpukernel \
	-I$(top_srcdir)/src/libgpuarch \
	-I$(top_srcdir)/src/libcpukernel


