lib_LIBRARIES = libsdram.a
libsdram_a_SOURCES = \
	mem-ctrl.c \
	sdram.c \
	sdram.h

INCLUDES = -I$(top_srcdir)/src/libstruct \
	-I$(top_srcdir)/src/libmhandle \
	-I$(top_srcdir)/src/libmisc \
	-I$(top_srcdir)/src/libnetwork \
	-I$(top_srcdir)/src/libesim \
	-I$(top_srcdir)/src/libcachesystem \
	-I$(top_srcdir)/src/libcpukernel \
	-I$(top_srcdir)/src/libcpudisasm

