lib_LIBRARIES = libmemory.a

libmemory_a_SOURCES = \
	\
	Cache.cc \
	Cache.h \
	\
	Directory.cc \
	Directory.h \
	\
	Frame.cc \
	Frame.h \
	\
	Memory.cc \
	Memory.h \
	\
	Manager.cc \
	Manager.h \
	\
	Mmu.cc \
	Mmu.h \
	\
	Module.cc \
	Module.h \
	\
	SpecMem.cc \
	SpecMem.h \
	\
	System.cc \
	SystemConfig.cc \
	SystemEvents.cc \
	System.h

AM_CPPFLAGS = @M2S_INCLUDES@

