lib_LIBRARIES = libnetwork.a
libnetwork_a_SOURCES = \
	\
	buffer.c \
	buffer.h \
	\
	bus.c \
	bus.h \
	\
	command.c \
	command.h \
	\
	config.c \
	config.h \
	\
	Link.h \
	\
	link.c \
	link.h \
	\
	message.c \
	message.h \
	\
	net-system.c \
	net-system.h \
	\
	Network.cc \
	Network.h \
	\
	network.h \
	network.c \
	\
	Node.h \
	\
	node.c \
	node.h \
	\
	packet.c \
	packet.h \
	\
	routing-table.c \
	routing-table.h \
	\
	System.cc \
	SystemConfig.cc \
	System.h \
	\
	visual.c \
	visual.h 

AM_CPPFLAGS = @M2S_INCLUDES@
