lib_LIBRARIES = libnetwork.a
libnetwork_a_SOURCES = \
	\
	buffer.c \
	buffer.h \
	\
	bus.c \
	bus.h \
	\
	command.c \
	command.h \
	\
	config.c \
	config.h \
	\
	\
	link.c \
	link.h \
	\
	message.c \
	message.h \
	\
	net-system.c \
	net-system.h \
	\
	network.h \
	network.c \
	\
	node.c \
	node.h \
	\
	packet.c \
	packet.h \
	\
	routing-table.c \
	routing-table.h \
	\
	visual.c \
	visual.h \
	\
	\
	\
	Buffer.h \
	Buffer.cc \
	\
	Bus.h \
	Bus.cc \
	\
	Connection.h\
	Connection.cc\
	\
	EndNode.h \
	EndNode.cc \
	\
	Link.h \
	Link.cc \
	\
	Message.h \
	Message.cc \
	\
	Network.cc \
	Network.h \
	\
	NetworkEventFrame.h \
	\
	Node.cc \
	Node.h \
	\
	Packet.h \
	Packet.cc \
	\
	RoutingTable.h \
	RoutingTable.cc \
	\
	System.h \
	System.cc \
	SystemConfig.cc \
	SystemEvents.cc \
	\
	Switch.h \
	Switch.cc

AM_CPPFLAGS = @M2S_INCLUDES@
