lib_LIBRARIES = libnetwork.a
libnetwork_a_SOURCES = \
	\
	Buffer.h \
	Buffer.cc \
	\
	Bus.h \
	Bus.cc \
	\
	Connection.h\
	Connection.cc\
	\
	EndNode.h \
	EndNode.cc \
	\
	Frame.h \
	\
	Graph.h \
	Graph.cc \
	\
	Link.h \
	Link.cc \
	\
	Message.h \
	Message.cc \
	\
	Network.cc \
	Network.h \
	\
	Node.cc \
	Node.h \
	\
	Packet.h \
	Packet.cc \
	\
	RoutingTable.h \
	RoutingTable.cc \
	\
	System.h \
	System.cc \
	SystemConfig.cc \
	SystemEvents.cc \
	\
	Switch.h \
	Switch.cc 

AM_CPPFLAGS = @M2S_INCLUDES@
