AC_INIT
AM_INIT_AUTOMAKE(multi2sim, 3.0.2)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/ioctl.h sys/time.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS([struct stat.st_blksize])
AC_STRUCT_ST_BLOCKS
AC_CHECK_MEMBERS([struct stat.st_rdev])
AC_HEADER_TIME

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([alarm bzero ftruncate getcwd gettimeofday mkdir strcasecmp strdup strstr])
AC_CHECK_LIB([pthread], [pthread_create], [LIBPTHREAD=true], [], [])

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 src/libnetwork/Makefile
		 src/libgpukernel/Makefile
		 src/libgpudisasm/Makefile
		 src/libcachesystem/Makefile
                 src/libm2skernel/Makefile
		 src/libdisasm/Makefile
		 src/libesim/Makefile
                 src/libmhandle/Makefile
                 src/libopt/Makefile
                 src/libstruct/Makefile
		 src/libmisc/Makefile
		 ])
AC_OUTPUT
